--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "app",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -22,7 +23,10 @@
     "expo-cli": "^3.28.2",
     "expo-constants": "~9.2.0",
     "expo-font": "~8.3.0",
+    "expo-image-manipulator": "~8.3.0",
+    "expo-image-picker": "~9.1.0",
     "expo-linking": "^1.0.1",
+    "expo-permissions": "~9.3.0",
     "expo-splash-screen": "~0.6.2",
     "expo-status-bar": "~1.0.2",
     "expo-web-browser": "~8.5.0",
@@ -31,6 +35,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-modal": "^11.5.6",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12"
